--- a/htmls/admin/nav-bar.html
+++ b/htmls/admin/nav-bar.html
@@ -193,7 +193,7 @@
                     <li class="nav-item dropdown no-arrow">
                         <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="mr-2 d-none d-lg-inline text-gray-600 small">ADMIN</span>
+                            <span class="mr-2 d-none d-lg-inline text-gray-600 small"><?=$_SESSION["usuario"]?></span>
 
                         </a>
                         <!-- Dropdown - User Information -->
