--- a/htmls/home.html
+++ b/htmls/home.html
@@ -283,6 +283,13 @@
      aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
+            <div class ="row">
+                <div class ="col-sm-12">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-sm-6 "> <!--Columnas-->
                     <div class="row alineacion_modal">
