control de usuarios

--- a/htmls/usuarios/nav-bar.html
+++ b/htmls/usuarios/nav-bar.html
@@ -212,7 +212,7 @@
 
             <!-- Begin Page Content --------------------------------------------------------------->
             <div class="container-fluid">
-                <?php include('admin.html')?>
+                <?php include('usuarios.html')?>
             </div>
             <!-- /.container-fluid ---------------------------------------------------------------->
 
