COntrol de usuarios

--- a/htmls/usuarios/usuarios.html
+++ b/htmls/usuarios/usuarios.html
@@ -14,7 +14,7 @@
 
 <div class ="row">
     <div class ="col-sm-12 text-right">
-        <button class ="admin_button">Agregar Usuarios</button>
+        <button class ="admin_button" data-toggle="modal" data-target="#exampleModal">Agregar Usuarios</button>
     </div>
 
 </div>
@@ -27,6 +27,45 @@
     </div>
 </div>
 
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Agregar Usuario</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form method="post" action="functional/_agregar_user.php">
+                    <div class="form-group">
+                        <input type="text" name ="nombre_r"class="form-control" style="width: 15em;text-align: left"
+                               id="nombre_r" aria-describedby="nombre" placeholder="Nombre completo">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" name ="empresa"class="form-control" style="width: 15em;text-align: left"
+                               id="nombre_empre" aria-describedby="nombre" placeholder="Empresa">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" name ="tipo_usuario"class="form-control" style="width: 15em;text-align: left"
+                               id="tipo_usuario" aria-describedby="tipo_usuario" placeholder="Tipo de usuario">
+                    </div>
+                    <div class="form-group">
+                        <input type="email" name ="email_r"class="form-control" style="width: 15em;text-align: left"
+                               id="email_r" aria-describedby="nombre" placeholder="Correo electornico">
+                    </div>
+                    <div class="form-group">
+                        <input type="password" name ="password_r"class="form-control" style="width: 15em;text-align: left"
+                               id="password_r" aria-describedby="nombre" placeholder="Contraseña">
+                    </div>
+                    <button class="button_modal" type="submit" name="submit">Registrar</button>
+                    <br><br>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
