Clases y subclases corregidas

--- a/htmls/header.html
+++ b/htmls/header.html
@@ -81,9 +81,9 @@
                         </div>
                     </div>
                     <div class="col-sm-3 text-center imgs_redes">
-                        <a href=""><img src="imgs/home/facebook1.svg" width="23%" height="100%"></a>
-                        <a href=""><img src="imgs/home/insta.svg" width="23%" height="100%"></a>
-                        <a href=""><img src="imgs/home/tweeter.svg" width="23%" height="100%"></a>
+                        <a href="https://www.facebook.com/chasmmochilas" target="_blank"><img src="imgs/home/facebook1.svg" width="23%" height="100%"></a>
+                        <a href="https://www.instagram.com/mochilaschasm/"target="_blank"><img src="imgs/home/insta.svg" width="23%" height="100%"></a>
+                        <a href="https://twitter.com/MochilasChasm"target="_blank"><img src="imgs/home/tweeter.svg" width="23%" height="100%"></a>
                     </div>
                 </div>
             </div>
