--- a/htmls/tienda/tienda.html
+++ b/htmls/tienda/tienda.html
@@ -18,10 +18,10 @@
             <br>
             <div class="row">
                 <div class="col-sm-12 listas_tienda">
-                    <p>Mochilas</p>
-                    <p>Bolsas para Dados</p>
-                    <p>Charolas Torres</p>
-                    <p>Fundas para Tapetesilas</p>
+                    <p class ="boton_tienda">Mochilas</p>
+                    <p class ="boton_tienda">Bolsas para Dados</p>
+                    <p class ="boton_tienda">Charolas Torres</p>
+                    <p class ="boton_tienda">Fundas para Tapetesilas</p>
 
                 </div>
             </div>
@@ -37,18 +37,18 @@
             <br>
             <div class="row">
                 <div class="col-sm-12 listas_tienda">
-                    <p>INFINITY</p>
-                    <p>Cajas de Inicio</p>
-                    <p>PanOceania</p>
-                    <p>Nómadas</p>
-                    <p>Yujing</p>
-                    <p>Haqqislam</p>
-                    <p>Ariadna</p>
-                    <p>ALEPH</p>
-                    <p>Ejército COmbinado</p>
-                    <p>Tohaa O-12</p>
-                    <P>Ejércitos no Alineados</p>
-                    <p>OTROS</p>
+                    <p class ="boton_tienda">INFINITY</p>
+                    <p class ="boton_tienda">Cajas de Inicio</p>
+                    <p class ="boton_tienda">PanOceania</p>
+                    <p class ="boton_tienda">Nómadas</p>
+                    <p class ="boton_tienda">Yujing</p>
+                    <p class ="boton_tienda">Haqqislam</p>
+                    <p class ="boton_tienda">Ariadna</p>
+                    <p class ="boton_tienda">ALEPH</p>
+                    <p class ="boton_tienda">Ejército COmbinado</p>
+                    <p class ="boton_tienda">Tohaa O-12</p>
+                    <P class ="boton_tienda">Ejércitos no Alineados</p>
+                    <p class ="boton_tienda">OTROS</p>
 
                 </div>
             </div>
@@ -64,11 +64,11 @@
             <br>
             <div class="row">
                 <div class="col-sm-12 listas_tienda">
-                    <p>MODIPHIUS</p>
-                    <p>NOSOLOROL</p>
-                    <p>FREE LEAGUE</p>
-                    <p>OTRAS</p>
-                    <p>Accesorios</p>
+                    <p class ="boton_tienda">MODIPHIUS</p>
+                    <p class ="boton_tienda">NOSOLOROL</p>
+                    <p class ="boton_tienda">FREE LEAGUE</p>
+                    <p class ="boton_tienda">OTRAS</p>
+                    <p class ="boton_tienda">Accesorios</p>
 
                 </div>
             </div>
@@ -84,10 +84,10 @@
             <br>
             <div class="row">
                 <div class="col-sm-12 listas_tienda">
-                    <p>Aristeia!</p>
-                    <p>Juego Baso</p>
-                    <p>Expansiones</p>
-                    <p>Accesorios</p>
+                    <p class ="boton_tienda">Aristeia!</p>
+                    <p class ="boton_tienda">Juego Baso</p>
+                    <p class ="boton_tienda">Expansiones</p>
+                    <p class ="boton_tienda">Accesorios</p>
 
                 </div>
             </div>
@@ -103,10 +103,10 @@
             <br>
             <div class="row">
                 <div class="col-sm-12 listas_tienda">
-                    <p>Chessex</p>
-                    <p>Sirius</p>
-                    <p>Infinity</p>
-                    <p>Otros</p>
+                    <p class ="boton_tienda">Chessex</p>
+                    <p class ="boton_tienda">Sirius</p>
+                    <p class ="boton_tienda">Infinity</p>
+                    <p class ="boton_tienda">Otros</p>
 
                 </div>
             </div>
