--- a/htmls/usuarios/usuarios.html
+++ b/htmls/usuarios/usuarios.html
@@ -59,9 +59,10 @@
                         <label for="exampleFormControlSelect1">Tipo de usuario</label>
                         <select class="" id="exampleFormControlSelect1" name ="tipo_usuario" id="tipo_usuario" placeholder="Tipo de usuario">
                             <option value="1">Admin</option>
-                            <option value="2">Usaurio</option>
+                            <option value="2">Usuario</option>
                         </select>
                     </div>
+                    <button class="btn btn-danger" type="button" >Cancelar</button>
                     <button class="btn btn-primary" type="submit" name="submit">Registrar</button>
                     <br><br>
                 </form>
