--- a/htmls/usuarios/nav-bar.html
+++ b/htmls/usuarios/nav-bar.html
@@ -189,6 +189,13 @@
 
                     <!-- Nav Item - User Information -->
                     <li class="nav-item dropdown no-arrow">
+                        <a class="nav-link" href="index.php">
+                            <span class="mr-2 d-none d-lg-inline text-gray-600 small">Ir a la pagina</span>
+
+                        </a>
+                        <!-- Dropdown - User Information -->
+                    </li>
+                    <li class="nav-item dropdown no-arrow">
                         <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="mr-2 d-none d-lg-inline text-gray-600 small"><?=$_SESSION["usuario"]?></span>
@@ -197,6 +204,10 @@
                         <!-- Dropdown - User Information -->
                         <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                              aria-labelledby="userDropdown">
+                            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                                <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                                Perfil
+                            </a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                                 <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
@@ -211,6 +222,7 @@
             <!-- End of Topbar -->
 
             <!-- Begin Page Content --------------------------------------------------------------->
+
             <div class="container-fluid">
                 <?php include('usuarios.html')?>
             </div>
