--- a/htmls/home.html
+++ b/htmls/home.html
@@ -82,7 +82,7 @@
     <!--Inicio de Tienda-->
     <div class="row">
         <div class="col-sm-4">
-            <a href="" class="links_cards">
+            <a href="_producto_interes.php" class="links_cards">
                 <div class="card card_shadow" style="width: 18rem; height: 35rem;">
                     <div class="trapezoid3 "><p style="margin-top: 10%">Comprar</p></div>
                     <img class="card-img-top" src="imgs/miniaturas/1.png" alt="Card image cap">
@@ -111,7 +111,7 @@
             </a>
         </div>
         <div class="col-sm-4">
-            <a href="" class="links_cards">
+            <a href="_producto_interes.php" class="links_cards">
                 <div class="card card_shadow" style="width: 18rem;height: 35rem;">
                     <div class="trapezoid3 "><p style="margin-top: 10%">Comprar</p></div>
                     <img class="card-img-top" src="imgs/miniaturas/3.png" alt="Card image cap">
@@ -131,7 +131,7 @@
     <br><br><br>
     <div class="row">
         <div class="col-sm-4">
-            <a href="" class="links_cards">
+            <a href="_producto_interes.php" class="links_cards">
                 <div class="card card_shadow" style="width: 18rem;height: 35rem;">
                     <div class="trapezoid3 "><p style="margin-top: 10%">Comprar</p></div>
                     <img class="card-img-top" src="imgs/miniaturas/4.png" alt="Card image cap">
@@ -161,7 +161,7 @@
             </a>
         </div>
         <div class="col-sm-4">
-            <a href="" class="links_cards">
+            <a href="_producto_interes.php" class="links_cards">
                 <div class="card card_shadow" style="width: 18rem;height: 35rem;">
                     <div class="trapezoid3 "><p style="margin-top: 10%">Comprar</p></div>
                     <img class="card-img-top" src="imgs/miniaturas/6.png" alt="Card image cap">
@@ -184,7 +184,7 @@
     <!--Boton de "IR a la tienda"-->
     <div class="row ">
         <div class="col-sm-12 text-center align-middle ">
-            <a href="#" class="links_tienda">
+            <a href="tienda.php" class="links_tienda">
                 <div id="trapezoid2">
                     <div class="row">
                         <div class="col-sm-12">
