--- a/htmls/tienda/tienda.html
+++ b/htmls/tienda/tienda.html
@@ -110,148 +110,19 @@
 
                 </div>
             </div>
-
-
         </div>
 <!---------------__Fin de categorias------------------>
-
-        <div class="col-sm-9">
+        <div class ="col-sm-9">
             <div class ="row">
-                <div class="col-sm-4">
-                    <a href="" class="links_cards">
-                        <div class="card card_shadow" style="width: 14rem;height: 25rem;">
-                            <div class="trapezoid3 "><p style="margin-top: 10%">Comprar</p></div>
-                            <img class="card-img-top" src="imgs/miniaturas/2.png" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">UNIDAD ARJUNA</h5>
-                                <p class="card-text">Las tropas Arjuna son ideales </p>
-
-                                <img src="imgs/miniaturas/carrito.svg" width="20%" height="20%"> $299.00
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-sm-4">
-                    <a href="" class="links_cards">
-                        <div class="card card_shadow" style="width: 14rem;height: 25rem;">
-                            <div class="trapezoid3 "><p style="margin-top: 10%">Comprar</p></div>
-                            <img class="card-img-top" src="imgs/miniaturas/2.png" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">UNIDAD ARJUNA</h5>
-                                <p class="card-text">Las tropas Arjuna son ideales </p>
-
-                                <img src="imgs/miniaturas/carrito.svg" width="20%" height="20%"> $299.00
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-sm-4">
-                    <a href="" class="links_cards">
-                        <div class="card card_shadow" style="width: 14rem;height: 25rem;">
-                            <div class="trapezoid3 "><p style="margin-top: 10%">Comprar</p></div>
-                            <img class="card-img-top" src="imgs/miniaturas/2.png" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">UNIDAD ARJUNA</h5>
-                                <p class="card-text">Las tropas Arjuna son ideales </p>
-
-                                <img src="imgs/miniaturas/carrito.svg" width="20%" height="20%"> $299.00
-                            </div>
-                        </div>
-                    </a>
-                </div>
+                <?php include('_mostrar_cards.php') ?>
             </div>
-            <br><br>
-            <div class ="row">
-                <div class="col-sm-4">
-                    <a href="" class="links_cards">
-                        <div class="card card_shadow" style="width: 14rem;height: 25rem;">
-                            <div class="trapezoid3 "><p style="margin-top: 10%">Comprar</p></div>
-                            <img class="card-img-top" src="imgs/miniaturas/2.png" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">UNIDAD ARJUNA</h5>
-                                <p class="card-text">Las tropas Arjuna son ideales </p>
 
-                                <img src="imgs/miniaturas/carrito.svg" width="20%" height="20%"> $299.00
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-sm-4">
-                    <a href="" class="links_cards">
-                        <div class="card card_shadow" style="width: 14rem;height: 25rem;">
-                            <div class="trapezoid3 "><p style="margin-top: 10%">Comprar</p></div>
-                            <img class="card-img-top" src="imgs/miniaturas/2.png" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">UNIDAD ARJUNA</h5>
-                                <p class="card-text">Las tropas Arjuna son ideales </p>
-
-                                <img src="imgs/miniaturas/carrito.svg" width="20%" height="20%"> $299.00
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-sm-4">
-                    <a href="" class="links_cards">
-                        <div class="card card_shadow" style="width: 14rem;height: 25rem;">
-                            <div class="trapezoid3 "><p style="margin-top: 10%">Comprar</p></div>
-                            <img class="card-img-top" src="imgs/miniaturas/2.png" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">UNIDAD ARJUNA</h5>
-                                <p class="card-text">Las tropas Arjuna son ideales </p>
-
-                                <img src="imgs/miniaturas/carrito.svg" width="20%" height="20%"> $299.00
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <br><br>
-            <div class ="row">
-                <div class="col-sm-4">
-                    <a href="" class="links_cards">
-                        <div class="card card_shadow" style="width: 14rem;height: 25rem;">
-                            <div class="trapezoid3 "><p style="margin-top: 10%">Comprar</p></div>
-                            <img class="card-img-top" src="imgs/miniaturas/2.png" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">UNIDAD ARJUNA</h5>
-                                <p class="card-text">Las tropas Arjuna son ideales </p>
-
-                                <img src="imgs/miniaturas/carrito.svg" width="20%" height="20%"> $299.00
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-sm-4">
-                    <a href="" class="links_cards">
-                        <div class="card card_shadow" style="width: 14rem;height: 25rem;">
-                            <div class="trapezoid3 "><p style="margin-top: 10%">Comprar</p></div>
-                            <img class="card-img-top" src="imgs/miniaturas/2.png" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">UNIDAD ARJUNA</h5>
-                                <p class="card-text">Las tropas Arjuna son ideales </p>
-
-                                <img src="imgs/miniaturas/carrito.svg" width="20%" height="20%"> $299.00
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-sm-4">
-                    <a href="" class="links_cards">
-                        <div class="card card_shadow" style="width: 14rem;height: 25rem;">
-                            <div class="trapezoid3 "><p style="margin-top: 10%">Comprar</p></div>
-                            <img class="card-img-top" src="imgs/miniaturas/2.png" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">UNIDAD ARJUNA</h5>
-                                <p class="card-text">Las tropas Arjuna son ideales </p>
-
-                                <img src="imgs/miniaturas/carrito.svg" width="20%" height="20%"> $299.00
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
         </div>
+
+
+
     </div>
 
 
 </div>
+
