--- a/htmls/footer.html
+++ b/htmls/footer.html
@@ -13,8 +13,8 @@
                     <br>
                     <p id="fuente_footer">¡Si quieres formar parte de la familia de Chasm Mochilas, mándanos un correo y
                         nos pondremos en contacto contigo a la brevedad!</p>
-                    <form action="send_mail.php">
-                        <input class ="input_footer" type="email" name="mail" placeholder="Correo electronico"><button class="button_send">-></button>
+                    <form action="send_mail2.php">
+                        <input class ="input_footer" type="email" name="mail" placeholder="Correo electronico"><button class="button_send" type="submit">-></button>
                     </form>
                 </div>
                 <div class="col-sm-3">
@@ -25,17 +25,17 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <li>Inicio</li>
+                            <a href="index.php#inicio"><li>Inicio</li></a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <li>Nosotros</li>
+                            <a href="index.php#nosotros"><li>Nosotros</li></a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <li>Tienda</li>
+                            <a  href ="tienda.php"><li>Tienda</li></a>
                         </div>
                     </div>
                     <div class="row">
@@ -50,7 +50,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <li>Contacto</li>
+                            <a href ="contacto.php"><li>Contacto</li></a>
                         </div>
                     </div>
 
@@ -64,50 +64,50 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-6">
-                            <li>Valkyria Juegos</li>
+                            <a href ="https://www.facebook.com/ValkiriaJuegos/"target="_blank"><li>Valkyria Juegos</li></a>
                         </div>
                         <div class="col-sm-6">
-                            <li>British Club</li>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <li>Dragon</li>
-                        </div>
-                        <div class="col-sm-6">
-                            <li>Stargame</li>
+                            <a href =""> <li>British Club</li></a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-6">
-                            <li>Dungeons & Coffee</li>
+                            <a href =""><li>Dragon</li></a>
                         </div>
                         <div class="col-sm-6">
-                            <li>Warhammer Monterrey</li>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <li>Master of War</li>
-                        </div>
-                        <div class="col-sm-6">
-                            <li>La Caravana</li>
+                            <a href =""><li>Stargame</li></a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-6">
-                            <li>Kallisti</li>
+                            <a href ="https://www.facebook.com/dungeonsandcoffee/"target="_blank"><li>Dungeons & Coffee</li></a>
                         </div>
                         <div class="col-sm-6">
-                            <li>Coffee and Dragons</li>
+                            <a href ="https://www.facebook.com/WarhammerMonterrey/"target="_blank"><li>Warhammer Monterrey</li></a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-6">
-                            <li>El Reino</li>
+                            <a href =""><li>Master of War</li></a>
                         </div>
                         <div class="col-sm-6">
-                            <li>UpYouGo</li>
+                            <a href =""><li>La Caravana</li></a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <a href ="http://www.kallisti.com.mx/"target="_blank"><li>Kallisti</li></a>
+                        </div>
+                        <div class="col-sm-6">
+                            <a href ="https://www.facebook.com/coffeeandragons/"target="_blank"><li>Coffee and Dragons</li></a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <a href =""><li>El Reino</li></a>
+                        </div>
+                        <div class="col-sm-6">
+                            <a href =""><li>UpYouGo</li></a>
                         </div>
                     </div>
                 </div>
