--- a/htmls/contacto.html
+++ b/htmls/contacto.html
@@ -5,21 +5,21 @@
 <br><br><br>
 
 <div class ="container_index">
-<form>
+<form action ="send_mail.php" method="post">
     <div class="form-group">
-        <input type="text" class="form-control" style="width: 30em;text-align: left" id="nombre" aria-describedby="nombre" placeholder="Nombre">
+        <input type="text" class="form-control" style="width: 30em;text-align: left" id="nombre" name ="nombre" aria-describedby="nombre" placeholder="Nombre">
     </div>
     <div class="form-group">
-        <input type="text" class="form-control" style="width: 30em;text-align: left" id="ubicacion" aria-describedby="ubicacion" placeholder="Ubicacion">
+        <input type="text" class="form-control" style="width: 30em;text-align: left" id="ubicacion" name ="ubicacion" aria-describedby="ubicacion" placeholder="Ubicacion">
     </div>
     <div class="form-group">
-        <input type="email" class="form-control" style="width: 30em;text-align: left" id="mail" aria-describedby="mail" placeholder="Correo electronico">
+        <input type="email" class="form-control" style="width: 30em;text-align: left" id="mail" name ="mail" aria-describedby="mail" placeholder="Correo electronico">
     </div>
     <div class="form-group">
-        <input type="text" class="form-control" style="width: 30em;text-align: left" id="asunto" aria-describedby="asunto" placeholder="Asunto">
+        <input type="text" class="form-control" style="width: 30em;text-align: left" id="asunto" name ="asunto" aria-describedby="asunto" placeholder="Asunto">
     </div>
     <div class="form-group">
-        <input type="text" class="form-control" style="width: 30em;text-align: left" id="mensaje" aria-describedby="mensaje" placeholder="Mensaje">
+        <input type="text" class="form-control" style="width: 30em;text-align: left" id="mensaje" name ="mensaje" aria-describedby="mensaje" placeholder="Mensaje">
     </div>
     <br><br>
     <div class ="form-group">
