--- a/htmls/header.html
+++ b/htmls/header.html
@@ -61,22 +61,22 @@
 
                         <div class="row">
                             <div class="col-sm-2">
-                                <a href="index#inicio" class ="font_header"><p>Inicio</p></a>
+                                <a href="index.php#inicio" class ="font_header"><p>Inicio</p></a>
                             </div>
                             <div class="col-sm-2">
-                                <a href="index#nosotros"class ="font_header"><p>Nosotros</p></a>
+                                <a href="index.php#nosotros"class ="font_header"><p>Nosotros</p></a>
                             </div>
                             <div class="col-sm-2">
-                                <a href="tienda"class ="font_header"><p>Tienda</p></a>
+                                <a href="tienda.php"class ="font_header"><p>Tienda</p></a>
                             </div>
                             <div class="col-sm-2">
                                 <a href="http://blog.chasm.com.mx"class ="font_header"><p>Blog</p></a>
                             </div>
                             <div class="col-sm-2">
-                                <a href="index#eventos"class ="font_header"><p>Eventos</p></a>
+                                <a href="index.php#eventos"class ="font_header"><p>Eventos</p></a>
                             </div>
                             <div class="col-sm-2">
-                                <a href="contacto"class ="font_header"><p>Contacto</p></a>
+                                <a href="contacto.php"class ="font_header"><p>Contacto</p></a>
                             </div>
                         </div>
                     </div>
