--- a/htmls/home.html
+++ b/htmls/home.html
@@ -35,8 +35,11 @@
         </div>
     </div>
 </div>
-<br><br><br><br><br>
+
+<div id ="nosotros"></div>
+<br><br><br><br><br><br><br><br>
 <!--Titulo de "Nosotros"-->
+
 <div class="row">
     <div class="col-sm-12">
         <h1 id="title">NOSOTROS</h1>
@@ -207,19 +210,19 @@
     <div class="row">
         <div class="col-sm-1"></div>
         <div class="col-sm-2">
-            <img src="imgs/home/corvus.svg" width="100%" height="100%">
+            <a href ="http://www.infinitythegame.com"target="_blank"><img src="imgs/home/corvus.svg" width="100%" height="100%"></a>
         </div>
         <div class="col-sm-2">
-            <img src="imgs/home/aristei.png" width="100%" height="100%">
+            <a href ="http://www.aristeiathegame.com"target="_blank"><img src="imgs/home/aristei.png" width="100%" height="100%"></a>
         </div>
         <div class="col-sm-2">
-            <img src="imgs/home/modifus.png" width="100%" height="100%">
+            <a href ="http://www.modiphius.com"target="_blank"><img src="imgs/home/modifus.png" width="100%" height="100%"></a>
         </div>
         <div class="col-sm-2">
-            <img src="imgs/home/nosolor.png" width="100%" height="100%">
+            <a href ="http://www.nosolorol.com"target="_blank"><img src="imgs/home/nosolor.png" width="100%" height="100%"></a>
         </div>
         <div class="col-sm-2">
-            <img src="imgs/home/sirius.png" width="100%" height="100%">
+            <a href ="http://www.siriusdice.com" target="_blank"><img src="imgs/home/sirius.png" width="100%" height="100%"></a>
         </div>
         <div class="col-sm-1"></div>
     </div>
