--- a/htmls/header.html
+++ b/htmls/header.html
@@ -126,7 +126,7 @@
                                 <button class="button_modal" type="submit" name="submit">Iniciar Sesion</button>
                                 <br><br>
                                 <div>
-                                    <p>Recuperar contraseña</p>
+                                    <a href ="recuperar.php"><p>Recuperar contraseña</p></a>
 
                                 </div>
 
@@ -172,5 +172,6 @@
 
         </div>
     </div>
+    <br>
 </div>
 
