--- a/htmls/home.html
+++ b/htmls/home.html
@@ -251,14 +251,14 @@
         <div class="col-sm-6">
             <div class="contenedor_imagen zoom">
                 <img src="imgs/blogs/1.png" width="100%" height="100%">
-                <div class="texto-encima">Fecha</div>
+                <div class="texto-encima">10/10/2019</div>
                 <div class="centrado">LA VERDAD SOBRE LOS <br>CALABOZOS</div>
             </div>
         </div>
         <div class="col-sm-6">
             <div class="contenedor_imagen zoom">
                 <img src="imgs/blogs/2.png" width="100%" height="100%">
-                <div class="texto-encima">Fecha</div>
+                <div class="texto-encima">6/09/2019</div>
                 <div class="centrado">SI, EXISTÍAN LAS <br>MAZMORRAS</div>
             </div>
         </div>
@@ -268,14 +268,14 @@
         <div class="col-sm-6">
             <div class="contenedor_imagen zoom">
                 <img src="imgs/blogs/3.png" width="100%" height="100%">
-                <div class="texto-encima">Fecha</div>
+                <div class="texto-encima">14/06/2019</div>
                 <div class="centrado">EL ORIGEN DE LOS <br>OVNIS</div>
             </div>
         </div>
         <div class="col-sm-6">
             <div class="contenedor_imagen zoom">
                 <img src="imgs/blogs/4.png" width="100%" height="100%">
-                <div class="texto-encima">Fecha</div>
+                <div class="texto-encima">7/08/2019</div>
                 <div class="centrado">EL AREA 51</div>
             </div>
         </div>
