--- a/htmls/header.html
+++ b/htmls/header.html
@@ -67,7 +67,7 @@
                                 <a href="index.php#nosotros"class ="font_header"><p>Nosotros</p></a>
                             </div>
                             <div class="col-sm-2">
-                                <a href="tienda.php"class ="font_header"><p>Tienda</p></a>
+                                <a href="tienda.php?pagina=1"class ="font_header"><p>Tienda</p></a>
                             </div>
                             <div class="col-sm-2">
                                 <a href="http://blog.chasm.com.mx"class ="font_header"><p>Blog</p></a>
