--- a/htmls/tienda/tienda.html
+++ b/htmls/tienda/tienda.html
@@ -18,10 +18,10 @@
             <br>
             <div class="row">
                 <div class="col-sm-12 listas_tienda">
-                    <p class ="boton_tienda">Mochilas</p>
-                    <p class ="boton_tienda">Bolsas para Dados</p>
-                    <p class ="boton_tienda">Charolas Torres</p>
-                    <p class ="boton_tienda">Fundas para Tapetesilas</p>
+                    <p class="boton_tienda"><a href="" class ="listas_tienda_link">Mochilas</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Bolsas para Dados</p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Charolas Torres</p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Fundas para Tapetesilas</p>
 
                 </div>
             </div>
@@ -37,18 +37,18 @@
             <br>
             <div class="row">
                 <div class="col-sm-12 listas_tienda">
-                    <p class ="boton_tienda">INFINITY</p>
-                    <p class ="boton_tienda">Cajas de Inicio</p>
-                    <p class ="boton_tienda">PanOceania</p>
-                    <p class ="boton_tienda">Nómadas</p>
-                    <p class ="boton_tienda">Yujing</p>
-                    <p class ="boton_tienda">Haqqislam</p>
-                    <p class ="boton_tienda">Ariadna</p>
-                    <p class ="boton_tienda">ALEPH</p>
-                    <p class ="boton_tienda">Ejército COmbinado</p>
-                    <p class ="boton_tienda">Tohaa O-12</p>
-                    <P class ="boton_tienda">Ejércitos no Alineados</p>
-                    <p class ="boton_tienda">OTROS</p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">INFINITY</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Cajas de Inicio</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">PanOceania</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Nómadas</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Yujing</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Haqqislam</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Ariadna</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">ALEPH</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Ejército COmbinado</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Tohaa O-12</a></p>
+                    <P class ="boton_tienda"><a href="" class ="listas_tienda_link">Ejércitos no Alineados</a>/p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">OTROS</a></p>
 
                 </div>
             </div>
@@ -64,11 +64,11 @@
             <br>
             <div class="row">
                 <div class="col-sm-12 listas_tienda">
-                    <p class ="boton_tienda">MODIPHIUS</p>
-                    <p class ="boton_tienda">NOSOLOROL</p>
-                    <p class ="boton_tienda">FREE LEAGUE</p>
-                    <p class ="boton_tienda">OTRAS</p>
-                    <p class ="boton_tienda">Accesorios</p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">MODIPHIUS</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">NOSOLOROL</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">FREE LEAGUE</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">OTRAS</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Accesorios</a></p>
 
                 </div>
             </div>
@@ -84,10 +84,10 @@
             <br>
             <div class="row">
                 <div class="col-sm-12 listas_tienda">
-                    <p class ="boton_tienda">Aristeia!</p>
-                    <p class ="boton_tienda">Juego Baso</p>
-                    <p class ="boton_tienda">Expansiones</p>
-                    <p class ="boton_tienda">Accesorios</p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Aristeia!</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Juego Baso</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Expansiones</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Accesorios</a></p>
 
                 </div>
             </div>
@@ -103,10 +103,10 @@
             <br>
             <div class="row">
                 <div class="col-sm-12 listas_tienda">
-                    <p class ="boton_tienda">Chessex</p>
-                    <p class ="boton_tienda">Sirius</p>
-                    <p class ="boton_tienda">Infinity</p>
-                    <p class ="boton_tienda">Otros</p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Chessex</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Sirius</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Infinity</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Otros</a></p>
 
                 </div>
             </div>
@@ -114,8 +114,21 @@
 <!---------------__Fin de categorias------------------>
         <div class ="col-sm-9">
             <div class ="row">
+                <div class ="col-sm-12 margin_numeros">
+                    <nav aria-label="Page navigation example" class ="-align-right">
+                        <ul class="pagination">
+                            <li class="page-item"><a class="page-link" href="tienda.php?pagina=1" >1</a></li>
+                            <li class="page-item"><a class="page-link" href="tienda.php?pagina=2" >2</a></li>
+                            <li class="page-item"><a class="page-link" href="tienda.php?pagina=3" >3</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <br><br>
+            <div class ="row">
                 <?php include('_mostrar_cards.php') ?>
             </div>
+
 
         </div>
 
